css message__date

--- a/app/public/css/app.css
+++ b/app/public/css/app.css
@@ -20,7 +20,7 @@
     margin-bottom: 0; }
   .message__row1 .message__date {
     margin-left: 30px;
-    color: #ccc;
+    color: #181010;
     font-size: 12px; }
 
 #block-chat {
