--- a/app/src/resources/views/partials/header.hbs
+++ b/app/src/resources/views/partials/header.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light header-w">
     <a class="navbar-brand" href="/">Trang chủ</a>
 
 
@@ -24,8 +24,8 @@
             </li>
 
         </ul>
-        <form class="form-inline my-2 my-lg-0" action="/user/logout">
+        {{!-- <form class="form-inline my-2 my-lg-0" action="/user/logout">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Đăng xuất</button>
-        </form>
+        </form> --}}
     </div>
 </nav>
