--- a/app/src/resources/views/chat.hbs
+++ b/app/src/resources/views/chat.hbs
@@ -1,5 +1,9 @@
 <h1 class="title-chat">My Chat App</h1>
 
+<form class="form-inline my-2 my-lg-0" action="/user/logout">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Đăng xuất</button>
+</form>
+
 
 <div id="block-chat">
 
