--- a/app/src/resources/views/home.hbs
+++ b/app/src/resources/views/home.hbs
@@ -26,6 +26,9 @@
             </button>
         </div>
     </form>
+    <form class="form-inline my-2 my-lg-0" action="/user/logout">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Đăng xuất</button>
+    </form>
 </body>
 
 </html>
