--- a/app/src/resources/views/home.hbs
+++ b/app/src/resources/views/home.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="/user/chat">
+    <form action="/user/chat" method="post">
         <h2>Join room</h2>
         <div id="input-name">
             <input type="text" required name="name" placeholder="Name">
@@ -20,12 +20,18 @@
                 <option value="Room 2">Room2</option>
             </select>
         </div>
+        <div id="input-password">
+            <input type="password" id="password" name="password" placeholder="Password">
+        </div>
         <div>
             <button type="submit">
                 Join
             </button>
         </div>
     </form>
+    <button>
+        <a href="/room/createGet">Tạo phòng mới</a>
+    </button>
     <form class="form-inline my-2 my-lg-0" action="/user/logout">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Đăng xuất</button>
     </form>
