--- a/app/src/resources/views/room/createRoom.hbs
+++ b/app/src/resources/views/room/createRoom.hbs
@@ -2,7 +2,7 @@
     <h3>Tạo phòng mới</h3>
     <div class="form-group">
         <label for="userName">Tên phòng</label>
-        <input type="text" name="name" class="form-control" id="name" placeholder="Nhập tên phòng">
+        <input type="text" name="roomName" class="form-control" id="name" placeholder="Nhập tên phòng">
     </div>
     <div class="form-group">
         <label for="passwordUser">Mật khẩu phòng</label>
