--- a/app/src/resources/views/home.hbs
+++ b/app/src/resources/views/home.hbs
@@ -12,12 +12,13 @@
     <form action="/user/chat" method="post">
         <h2>Join room</h2>
         <div id="input-name">
-            <input type="text" required name="name" placeholder="Name">
+            <input type="text" required name="userName" placeholder="Name">
         </div>
         <div id="input-room">
-            <select type="text" name="room" placeholder="Room">
-                <option value="Room 1">Room1</option>
-                <option value="Room 2">Room2</option>
+            <select type="text" name="roomName" placeholder="Room">
+                {{#each listRoom}}
+                <option value="{{this.roomName}}">{{this.roomName}}</option>
+                {{/each}}
             </select>
         </div>
         <div id="input-password">
