--- a/app/src/resources/views/room/createRoom.hbs
+++ b/app/src/resources/views/room/createRoom.hbs
@@ -1,13 +1,17 @@
-<form action="" , method="POST">
-    <h3>Tạo phòng mới</h3>
-    <div class="form-group">
-        <label for="userName">Tên phòng</label>
-        <input type="text" name="roomName" class="form-control" id="name" placeholder="Nhập tên phòng">
+<div class="form-room">
+    <div class="input-form-room">
+        <form class="form-input-room" action="" , method="POST">
+            <h3 class="title">TẠO PHÒNG MỚI</h3>
+            <label class="label-form-create" for="userName">Tên phòng:</label>
+            <input class="input-info-room" type="text" name="roomName" class="form-control" id="name" placeholder="Nhập tên phòng">                      
+            <label class="label-form-create" for="passwordUser">Mật khẩu phòng:</label>
+            <input class="input-info-room" type="password" name="password" class="form-control" id="password" placeholder="Nhập mật khẩu phòng">
+            <div class="block-btn-login">
+                <button class="btn-login" type="submit" class="btn btn-primary">Tạo phòng</button>
+                <a class="link-create-room" href="/">Gia nhập</a>
+            </div>
+            
+        </form>
+        
     </div>
-    <div class="form-group">
-        <label for="passwordUser">Mật khẩu phòng</label>
-        <input type="password" name="password" class="form-control" id="password" placeholder="Nhập mật khẩu phòng">
-    </div>
-
-    <button type="submit" class="btn btn-primary">Tạo phòng</button>
-</form>
+</div>
