--- a/app/src/resources/views/user/login.hbs
+++ b/app/src/resources/views/user/login.hbs
@@ -1,14 +1,16 @@
-<form action="/user/loginPost" method="POST">
-    <h3>Đăng nhập</h3>
-    <div class="form-group">
-        <label for="userName">Tài khoản</label>
-        <input type="text" name="userName" class="form-control" id="userName" placeholder="Nhập tài khoản">
+<div class="form-room">
+    <div class="input-form-room">
+        <form action="/user/loginPost" method="POST">
+            <h3 class="title">Đăng nhập</h3>
+        
+            <label class="label-form-create" for="userName">Tài khoản</label>
+            <input class="input-info-room" type="text" name="userName" class="form-control" id="userName" placeholder="Nhập tài khoản">      
+            <label class="label-form-create" for="passwordUser">Mật khẩu</label>
+            <input class="input-info-room" type="password" name="password" class="form-control" id="passwordUser" placeholder="Nhập mật khẩu">           
+            <div class="block-btn-login">
+                <button class="btn-login" type="submit" class="btn btn-primary">Đăng nhập</button>
+                <a class="link-create-room" href="/user/register">Đăng ký</a>
+            </div>
+       </form>
     </div>
-    <div class="form-group">
-        <label for="passwordUser">Mật khẩu</label>
-        <input type="password" name="password" class="form-control" id="passwordUser" placeholder="Nhập mật khẩu">
-    </div>
-
-    <button type="submit" class="btn btn-primary">Đăng nhập</button>
-    <a href="/user/register">Đăng ký</a>
-</form>
+</div>
