--- a/app/src/resources/views/user/register.hbs
+++ b/app/src/resources/views/user/register.hbs
@@ -2,19 +2,28 @@
     <div class="create-account">
         <form action="/user/registerPost" , method="POST">
             <h3 class="title">Đăng ký</h3>
-            <input type="text" class="input-create-account" name="name" placeholder="Họ và tên">
-            <input class="input-create-account" type="text" name="userName" class="form-control" id="userName" placeholder="Tài khoản">       
-            <input class="input-create-account" type="password" name="password" class="form-control" id="passwordUser" placeholder="Mật khẩu">
-            <input class="input-create-account" type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-            placeholder="Email">
-            <label for="male">Nam</label>
+            <input type="text" class="input-create-account" name="fullName" placeholder="Họ và tên">
+            <input class="input-create-account" type="text" name="userName" class="form-control" id="userName"
+                placeholder="Tài khoản">
+            <input class="input-create-account" type="password" name="password" class="form-control" id="passwordUser"
+                placeholder="Mật khẩu">
+            <input class="input-create-account" type="password" name="retypepassword" class="form-control"
+                id="passwordUser" placeholder="Nhập lại mật khẩu">
+            <input class="input-create-account" type="email" name="email" class="form-control" id="exampleInputEmail1"
+                aria-describedby="emailHelp" placeholder="Email">
+            {{!-- <label for="male">Nam</label>
             <input type="radio" class="input-gender" id="male" name="gender" value="male">
 
             <label for="femal">Nữ</label>
             <input type="radio" class="input-gender" id="female" name="gender" value="female">
 
             <label for="other">Khác</label>
-            <input type="radio" class="input-gender" id="other" name="gender" value="other">
+            <input type="radio" class="input-gender" id="other" name="gender" value="other"> --}}
+            <select name="sex">
+                <option value="Nam">Nam</option>
+                <option value="Nữ">Nữ</option>
+                <option value="Khác">Khác</option>
+            </select>
 
             <input type="date" id="birthday" name="birthday">
             <button class="btn-create-account" type="submit" class="btn btn-primary">Đăng ký</button>
